<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>tech.hljzj.zaf</groupId>
        <artifactId>zaf-parent</artifactId>
        <version>1.1.4-SNAPSHOT</version>
        <relativePath/>
    </parent>

    <artifactId>infra-api</artifactId>
    <version>3.0.2</version>
    <packaging>jar</packaging>
    <description>基座服务</description>

    <url/>

    <properties>
        <!-- 实际用于编译的jdk版本 -->
        <java.version>1.8</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>tech.hljzj.zaf</groupId>
            <artifactId>zaf-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>tech.hljzj.zaf</groupId>
            <artifactId>zaf-module-db-pg</artifactId>
        </dependency>
    </dependencies>

</project>
